Support spaces in MOZ_MACBUNDLE_NAME
Based on BMO bugs 1407285, 1424098, and 1424294

This resolves #701.

--- a/application/basilisk/locales/Makefile.in
+++ b/application/basilisk/locales/Makefile.in
@@ -168,10 +168,10 @@ endif
 ident:
 	@printf 'fx_revision '
 	@$(PYTHON) $(topsrcdir)/config/printconfigsetting.py \
-	    $(STAGEDIST)/application.ini App SourceStamp
+	    '$(STAGEDIST)'/application.ini App SourceStamp
 	@printf 'buildid '
 	@$(PYTHON) $(topsrcdir)/config/printconfigsetting.py \
-	    $(STAGEDIST)/application.ini App BuildID
+	    '$(STAGEDIST)'/application.ini App BuildID
 
 merge-%:
 ifdef LOCALE_MERGEDIR
